@@ -8,7 +8,6 @@ import akka.stream.javadsl.FileIO;
 import akka.stream.javadsl.Source;
 import akka.util.ByteString;
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import controllers.BaseApplicationTest;
 import controllers.DummyActor;
 import java.io.File;
@@ -20,7 +19,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import modules.OnRequestHandler;
-import org.apache.commons.lang3.StringUtils;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mockito;
@@ -29,9 +27,6 @@ import org.powermock.core.classloader.annotations.PowerMockIgnore;
 import org.powermock.core.classloader.annotations.PrepareForTest;
 import org.sunbird.exception.ResponseCode;
 import org.sunbird.keys.JsonKey;
-import org.sunbird.response.Response;
-import org.sunbird.response.ResponseParams;
-import play.libs.Json;
 import play.mvc.Http;
 import play.mvc.Result;
 import play.test.Helpers;
@@ -63,7 +58,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "POST",
             createOrUpdateOrganisationRequest(orgName, null, false, null, null));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -73,7 +68,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     ((Map<String, Object>) reqMap.get(JsonKey.REQUEST)).put(JsonKey.LICENSE, "Test MIT license");
     Result result = performTest("/v1/org/create", "POST", reqMap);
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -83,7 +78,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     ((Map<String, Object>) reqMap.get(JsonKey.REQUEST)).put(JsonKey.LICENSE, "Test MIT license");
     Result result = performTest("/v1/org/create", "POST", reqMap);
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -93,7 +88,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     ((Map<String, Object>) reqMap.get(JsonKey.REQUEST)).put(JsonKey.LICENSE, "");
     Result result = performTest("/v1/org/create", "POST", reqMap);
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
@@ -104,7 +99,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "POST",
             createOrUpdateOrganisationRequest(null, null, false, null, null));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
@@ -115,7 +110,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "POST",
             createOrUpdateOrganisationRequest(orgName, null, true, rootOrgId, null));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
@@ -126,7 +121,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "PATCH",
             createOrUpdateOrganisationRequest(null, orgId, false, rootOrgId, null));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -137,7 +132,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "PATCH",
             createOrUpdateOrganisationRequest(null, null, false, rootOrgId, null));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
@@ -148,7 +143,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "PATCH",
             createOrUpdateOrganisationRequest(null, orgId, false, null, status));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -159,21 +154,21 @@ public class OrganisationControllerTest extends BaseApplicationTest {
             "PATCH",
             createOrUpdateOrganisationRequest(null, null, false, null, status));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
   public void testGetOrgDetailsSuccess() {
     Result result = performTest("/v1/org/read", "POST", getOrganisationRequest(orgId, status));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
   public void testGetOrgDetailsFailureWithoutOrgId() {
     Result result = performTest("/v1/org/read", "POST", getOrganisationRequest(null, status));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
@@ -181,7 +176,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     Result result =
         performTest("/v1/org/search", "POST", searchOrganisationRequest(status, new HashMap<>()));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
@@ -189,21 +184,22 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     Result result =
         performTest("/v2/org/search", "POST", searchOrganisationRequest(status, new HashMap<>()));
     assertEquals(getResponseCode(result), ResponseCode.SUCCESS.name());
-    assertTrue(getResponseStatus(result) == 200);
+    assertEquals(200, getResponseStatus(result));
   }
 
   @Test
   public void testSearchOrgFailureWithoutFilters() {
     Result result = performTest("/v1/org/search", "POST", searchOrganisationRequest(status, null));
     assertEquals(getResponseCode(result), ResponseCode.CLIENT_ERROR.name());
-    assertTrue(getResponseStatus(result) == 400);
+    assertEquals(400, getResponseStatus(result));
   }
 
   @Test
   public void testAddEncyptionKeyPublicPem() throws IOException {
+    String controllerPath = (Paths.get("").toAbsolutePath().toString().endsWith("controller"))?Paths.get("").toAbsolutePath().toString():Paths.get("").toAbsolutePath().toString()+File.separator +"controller";
     File file =
         new File(
-            Paths.get("").toAbsolutePath() + File.separator + "test/resources/samplepublic.pem");
+                controllerPath + File.separator + "test/resources/samplepublic.pem");
     Http.MultipartFormData.Part<Source<ByteString, ?>> part =
         new Http.MultipartFormData.FilePart<>(
             "fileName",
@@ -227,8 +223,9 @@ public class OrganisationControllerTest extends BaseApplicationTest {
 
   @Test
   public void testAddEncyptionKeyPDF() throws IOException {
+    String controllerPath = (Paths.get("").toAbsolutePath().toString().endsWith("controller"))?Paths.get("").toAbsolutePath().toString():Paths.get("").toAbsolutePath().toString()+File.separator +"controller";
     File file =
-        new File(Paths.get("").toAbsolutePath() + File.separator + "test/resources/sample.pdf");
+        new File(controllerPath + File.separator + "test/resources/sample.pdf");
     Http.MultipartFormData.Part<Source<ByteString, ?>> part =
         new Http.MultipartFormData.FilePart<>(
             "fileName",
@@ -280,7 +277,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
     innerMap.put(JsonKey.IS_TENANT, isRootOrg);
     innerMap.put(JsonKey.ORG_TYPE, "board");
 
-    if (status != null) innerMap.put(JsonKey.STATUS, new Integer(status));
+    if (status != null) innerMap.put(JsonKey.STATUS, Integer.valueOf(status));
 
     requestMap.put(JsonKey.REQUEST, innerMap);
 
@@ -292,7 +289,7 @@ public class OrganisationControllerTest extends BaseApplicationTest {
 
     Map<String, Object> innerMap = new HashMap<>();
     innerMap.put(JsonKey.ORGANISATION_ID, orgId);
-    if (status != null) innerMap.put(JsonKey.STATUS, new Integer(status));
+    if (status != null) innerMap.put(JsonKey.STATUS, Integer.valueOf(status));
 
     requestMap.put(JsonKey.REQUEST, innerMap);
 
@@ -304,60 +301,10 @@ public class OrganisationControllerTest extends BaseApplicationTest {
 
     Map<String, Object> innerMap = new HashMap<>();
     innerMap.put(JsonKey.FILTERS, filterMap);
-    if (status != null) innerMap.put(JsonKey.STATUS, new Integer(status));
+    if (status != null) innerMap.put(JsonKey.STATUS, Integer.valueOf(status));
 
     requestMap.put(JsonKey.REQUEST, innerMap);
 
     return requestMap;
-  }
-
-  public Result performTest(String url, String method, Map map) {
-    String data = mapToJson(map);
-    Http.RequestBuilder req;
-    if (StringUtils.isNotBlank(data)) {
-      JsonNode json = Json.parse(data);
-      req = new Http.RequestBuilder().bodyJson(json).uri(url).method(method);
-    } else {
-      req = new Http.RequestBuilder().uri(url).method(method);
-    }
-    // req.headers(new Http.Headers(headerMap));
-    Result result = Helpers.route(application, req);
-    return result;
-  }
-
-  public String mapToJson(Map map) {
-    ObjectMapper mapperObj = new ObjectMapper();
-    String jsonResp = "";
-
-    if (map != null) {
-      try {
-        jsonResp = mapperObj.writeValueAsString(map);
-      } catch (IOException e) {
-        e.printStackTrace();
-      }
-    }
-    return jsonResp;
-  }
-
-  public String getResponseCode(Result result) {
-    String responseStr = Helpers.contentAsString(result);
-    ObjectMapper mapper = new ObjectMapper();
-
-    try {
-      Response response = mapper.readValue(responseStr, Response.class);
-      ResponseParams params = response.getParams();
-      if (result.status() != 200) {
-        return response.getResponseCode().name();
-      } else {
-        return params.getStatus();
-      }
-    } catch (Exception e) {
-      e.printStackTrace();
-    }
-    return "";
-  }
-
-  public int getResponseStatus(Result result) {
-    return result.status();
   }
 }
